[package]
name = "buttons"
version = "0.3.1"
authors = ["Vi <violet@hey.com>"]
description = "A simple API for storing and querying input state."
edition = "2018"
homepage = "https://github.com/mistodon/buttons"
repository = "https://github.com/mistodon/buttons"
readme = "README.md"
keywords = ["input", "keyboard", "mouse"]
categories = ["games"]
license = "CC0-1.0"

[package.metadata.docs.rs]
all-features = true

[dependencies.winit]
version = "=0.21.0"
optional = true

[features]
default = []
winit-support = ["winit"]

[badges]
travis-ci = { repository = "mistodon/buttons" }
