[package]
name = "buttons"
version = "0.5.0"
authors = ["Vi <violet@hey.com>"]
description = "A simple API for storing and querying input state."
edition = "2021"
homepage = "https://github.com/mistodon/buttons"
repository = "https://github.com/mistodon/buttons"
readme = "README.md"
keywords = ["input", "keyboard", "mouse", "touch"]
categories = ["games"]
license = "CC0-1.0"

[package.metadata.docs.rs]
features = ["winit"]

[dependencies.winit_0_21]
package = "winit"
version = "0.21"
optional = true

[dependencies.winit_0_24]
package = "winit"
version = "0.24"
optional = true

[dependencies.winit_0_27]
package = "winit"
version = "0.27"
optional = true

[features]
default = []
winit = ["winit_0_27"]
winit_0_21 = ["dep:winit_0_21"]
winit_0_24 = ["dep:winit_0_24"]
winit_0_27 = ["dep:winit_0_27"]
