[package]
name = "buttons"
version = "0.6.0"
authors = ["Vi <violet@hey.com>"]
description = "A simple API for storing and querying input state."
edition = "2024"
homepage = "https://github.com/mistodon/buttons"
repository = "https://github.com/mistodon/buttons"
readme = "README.md"
keywords = ["input", "keyboard", "mouse", "touch"]
categories = ["games"]
license = "CC0-1.0"

[package.metadata.docs.rs]
features = ["winit"]

[dependencies]
smallvec = "1.14.0"
smol_str = "0.3.2"

[dependencies.winit_0_21]
package = "winit"
version = ">= 0.21, < 0.24"
optional = true

[dependencies.winit_0_24]
package = "winit"
version = ">= 0.24, < 0.27"
optional = true

[dependencies.winit_0_27]
package = "winit"
version = ">= 0.27, < 0.29"
optional = true

[dependencies.winit_0_29]
package = "winit"
version = ">= 0.29, < 0.30"
optional = true

[dependencies.winit_0_30]
package = "winit"
version = ">= 0.30"
optional = true

[features]
default = []
winit = ["winit_0_30"]
winit_0_21 = ["dep:winit_0_21"]
winit_0_24 = ["dep:winit_0_24"]
winit_0_27 = ["dep:winit_0_27"]
winit_0_29 = ["dep:winit_0_29"]
winit_0_30 = ["dep:winit_0_30"]
